Fix background contrast

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,29 +17,32 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background: linear-gradient(45deg, #00d 0%, #006 100%);
+  background: linear-gradient(45deg, #000 0%, #006 100%);
 }
 
 .halftone {
   --stop1: 0.5px;
-  --halftone-size: 3px;
+  --halftone-size: 8px;
   --bg-size: calc(var(--halftone-size) * 1.75);
 
-  filter: contrast(2) blur(1.5px) saturate(20%) brightness(1.8);
-  mix-blend-mode: lighten;
+  filter: contrast(1) blur(5px) saturate(40%) brightness(1.6);
+  mix-blend-mode: hard-light;
+  /* backdrop-filter: blur(50px); */
+
   /* mix-blend-mode: multiply; */
   width: 100%;
   height: 100%;
 }
+
 .halftone::after {
   content: '';
+  backdrop-filter: blur(50px);
   position: absolute;
   inset: 0;
-
   background: repeat center/var(--bg-size) var(--bg-size)
     radial-gradient(
       ellipse at center,
-      #bbb var(--stop1),
+      #fff var(--stop1),
       transparent var(--halftone-size)
     );
   /* mask-image: linear-gradient(rgb(0 0 0), rgb(0 0 0 / 50%)); */
